Bug 131568 - CHAPTER NUMBERING DIALOG: List of character styles is not alpahbetical
Summary: CHAPTER NUMBERING DIALOG: List of character styles is not alpahbetical
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.5.2 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on:
Blocks: Heading-Numbering-Dialog
  Show dependency treegraph
 
Reported: 2020-03-25 13:10 UTC by Dieter
Modified: 2022-07-30 07:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2020-03-25 13:10:22 UTC
Steps to reproduce:

1. Tools => Chapter Numbering => Tab "Numbering"
2. Open list of Character Styles

Result: List is not alphabetical

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 5dcbd1bb557450a2d658a710c163b310c0cee157
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

and

Version: 6.3.5.2 (x64)
Build-ID: dd0751754f11728f69b42ee2af66670068624673
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 1 Kevin Suo 2020-03-25 14:55:56 UTC Comment hidden (obsolete)
Comment 2 Kevin Suo 2020-03-25 14:57:17 UTC Comment hidden (obsolete)
Comment 3 Cor Nouws 2020-04-21 19:48:41 UTC
confirming in Version: 7.0.0.0.alpha0+
Build ID: 1289ef10406e00d0fc9abc5bca444d026ab21743
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-04-16_09:37:58
Locale: nl-NL (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Commit Notification 2022-07-04 13:05:10 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d6a363d83011ce3f195b96816e25dd749772cc24

tdf#131568 - Chapter numbering dialog: sort list of character styles

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-07-05 08:52:07 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/322f7414ce9600e45e52f9e3a89296703c2a6b42

tdf#131568 - Chapter numbering dialog: sort list of character styles

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2022-07-30 07:35:46 UTC
VERIFIED with

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4827d5cb1508f6bca9489e31b877cfff36393c50
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Andreas, thank you for fixing it!