tdf#131568 - Chapter numbering dialog: sort list of character styles

Change-Id: Ibe6830a7d3fdd35c4d8e6fa2b7c0007fa318083a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136798
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit d6a363d83011ce3f195b96816e25dd749772cc24)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136761
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>